--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.13.2",
     "next": "^14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
