--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.563.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^18.3.1",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
